# psucontrol

./: .gitignore  AGENTS.md  BUGS.md  CMakeLists.txt  Makefile  README.md  nucleo_h723zg.overlay  prj.conf  pyproject.toml  sections-rom.ld
psucontrol/: __init__.py  api.py  cli.py  discover.py
src/: main.c  psu.c  psu.h
src/static_web_resources/: index.html  main.js
